kanc/src/tests/integration/should_fail/mod.rs
use super::*;

mod multi_file;
mod single_file;
